syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";

package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SayHelloAgain (HelloRequest) returns (HelloReply) {}
  rpc Register (Credentials) returns (RegisterReply) {}
  rpc Login (Credentials) returns (LoginReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message Credentials {
    string uname = 1;
    string pwd = 2;
}

message RegisterReply {
    string message = 1;
}

message LoginReply {
    bool status = 1;
}